# brim

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  cliff.toml  design.md  justfile  rustfmt.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: release.yaml  stale.yaml
cli/: Cargo.toml
cli/src/: cli.rs  config.rs  context.rs  graph.rs  idx.rs  main.rs  panic.rs  panic_handler.rs  path.rs  plural.rs  random.rs  tracing.rs
cli/src/ast/: expressions.rs  item.rs  mod.rs  statements.rs  types.rs
cli/src/commands/: init.rs  run.rs
cli/src/compilation/: build_type.rs  imports.rs  items.rs  mod.rs  namespace.rs  unit.rs
cli/src/compilation/code_gen/: compiler.rs  enums.rs  expr.rs  functions.rs  generator.rs  linker.rs  mod.rs  structs.rs  utils.rs
cli/src/compilation/code_gen/built_ins/: mod.rs
cli/src/compilation/code_gen/built_ins/definitions/: print.cpp  try.cpp
cli/src/compilation/passes/: mod.rs  resolver.rs
cli/src/compilation/passes/type_checker/: mod.rs  pass.rs
cli/src/error/: diagnostic.rs  mod.rs  span.rs
cli/src/lexer/: identifiers.rs  mod.rs  numbers.rs  punctuation.rs  source.rs  string.rs  tokens.rs
cli/src/parser/: expressions.rs  mod.rs  statements.rs
cli_old/: Cargo.toml
cli_old/src/: cli.rs  context.rs  idx.rs  main.rs  path.rs
cli_old/src/ast/: expressions.rs  mod.rs  statements.rs  types.rs
cli_old/src/commands/: run.rs
cli_old/src/compilation/: unit.rs
cli_old/src/compilation/code_gen/: enums.rs  expr.rs  functions.rs  generator.rs
cli_old/src/error/: position.rs
cli_old/src/lexer/: identifiers.rs  mod.rs  source.rs  tokens.rs
cli_old/src/parser/: expressions.rs  mod.rs  statements.rs
core/: brim.toml
crates/brim/: Cargo.toml
crates/brim/src/: barrel.rs  compiler.rs  diag_ctx.rs  diagnostics.rs  discover.rs  graph.rs  lib.rs  main.rs  resolver.rs  sesion.rs  session.rs  walker.rs
crates/brim/src/name/: errors.rs  mod.rs  scopes.rs
crates/brim/src/validator/: errors.rs  mod.rs
crates/brim_ast/: Cargo.toml
crates/brim_ast/src/: expr.rs  item.rs  lib.rs  stmts.rs  token.rs  ty.rs
crates/brim_codegen/: Cargo.toml
crates/brim_codegen/src/: codegen.rs  expr.rs  generics.rs  injects.cpp  item.rs  lib.rs  stmt.rs  ty.rs
crates/brim_config/: Cargo.toml
crates/brim_config/src/: errors.rs  lib.rs  parsed.rs  toml.rs
crates/brim_cpp_compiler/: Cargo.toml
crates/brim_cpp_compiler/src/: build_type.rs  compiler.rs  detect.rs  lib.rs
crates/brim_ctx/: Cargo.toml
crates/brim_ctx/src/: barrel.rs  compiler.rs  diag_ctx.rs  errors.rs  ider.rs  lib.rs  modules.rs  resolver.rs  walker.rs
crates/brim_ctx/src/name/: errors.rs  mod.rs  scopes.rs
crates/brim_ctx/src/validator/: errors.rs  mod.rs
crates/brim_diag_macro/: Cargo.toml
crates/brim_diag_macro/src/: function.rs  lib.rs
crates/brim_diagnostics/: Cargo.toml  README.md
crates/brim_diagnostics/lib/: Cargo.toml  README.md
crates/brim_diagnostics/lib/src/: lib.rs
crates/brim_diagnostics/lib/src/codespan/: span.rs
crates/brim_diagnostics/lib/src/reporting/: diagnostic.rs  files.rs  mod.rs  term.rs
crates/brim_diagnostics/playground/: Cargo.toml
crates/brim_diagnostics/playground/src/: main.rs
crates/brim_diagnostics/src/: lib.rs
crates/brim_diagnostics/src/codespan/: file.rs  index.rs  location.rs  mod.rs  span.rs
crates/brim_diagnostics/src/reporting/: diagnostic.rs  files.rs  term.rs
crates/brim_diagnostics/src/reporting/term/: config.rs  renderer.rs  views.rs
crates/brim_fs/: Cargo.toml
crates/brim_fs/src/: lib.rs  loader.rs
crates/brim_hir/: Cargo.toml
crates/brim_hir/src/: builtin.rs  errors.rs  expr.rs  items.rs  lib.rs  stmts.rs  transformer.rs  ty.rs
crates/brim_hir/src/comptime/: errors.rs  eval_scopes.rs  mod.rs
crates/brim_hir/src/inference/: errors.rs  mod.rs  scope.rs
crates/brim_hir/src/type_checker/: errors.rs  expr.rs  functions.rs  mod.rs
crates/brim_index/: Cargo.toml
crates/brim_index/src/: lib.rs
crates/brim_lexer/: Cargo.toml
crates/brim_lexer/src/: cursor.rs  idents.rs  lib.rs  whitespace.rs
crates/brim_middle/: Cargo.toml
crates/brim_middle/src/: args.rs  barrel.rs  builtins.rs  experimental.rs  lib.rs  lints.rs  modules.rs  temp_diag.rs  walker.rs
crates/brim_parser/: Cargo.toml
crates/brim_parser/src/: lib.rs
crates/brim_parser/src/lexer/: errors.rs  identifiers.rs  literals.rs  mod.rs  unicode.rs
crates/brim_parser/src/parser/: barrel.rs  cursor.rs  errors.rs  expr.rs  generics.rs  items.rs  mod.rs  stmt.rs  symbols.rs  ty.rs
crates/brim_shell/: Cargo.toml
crates/brim_shell/src/: lib.rs  link.rs
crates/brim_span/: Cargo.toml
crates/brim_span/src/: file.rs  files.rs  index.rs  lib.rs  location.rs  span.rs  symbol.rs
crates/brim_span/src/symbols/: mod.rs
crates/brim_symbols_macro/: Cargo.toml
crates/brim_symbols_macro/src/: generator.rs  lib.rs
crates/error/: Cargo.toml
crates/shell/: Cargo.toml
crates/shell/src/: lib.rs
design/: main.excalidraw  whitespace.md
docs/: package.json  pnpm-lock.yaml  tailwind.config.js
docs/app/: layout.config.tsx
docs/app/(home)/: layout.tsx
docs/app/docs/[[...slug]]/: page.tsx
docs/content/docs/: meta.json
docs/content/docs/dev-guide/: compiler.mdx  index.mdx  meta.json
docs/content/docs/reference/: identifiers.mdx  index.mdx  meta.json  whitespace.mdx
docs/content/docs/reference/common/: types.mdx
docs/lib/: source.ts
playground/: brim.toml  main.brim
playground/src/: main.brim  span.brim  test.brim
snap/: Cargo.toml
snap/src/: collector.rs  main.rs  reporter.rs  runner.rs
std/: .gitignore  brim.toml
std/src/: index.brim  lib.brim  main.brim
std/src/fs/: file.brim
std/src/io/: error.brim  lib.brim  stdio.brim
std/src/os/: windows.brim
std/src/os/windows/: kernel32.brim
tests/: emoji-identifiers.brim  no-digits-literal.brim  unknown-token.brim
tests/literals/: byte-literals.brim  char.brim  empty-float-exponent.brim  invalid-digit-literal.brim  string.birm  unsupported-float-base.brim
tests/parser/fn/: signature.brim
tools/: etw-mimalloc.wprp
(+6 files in other folders)
