[workspace]
members = ["cli", "crates/brim_config", "crates/brim_cpp_compiler", "crates/brim_fs", "crates/brim_shell", "crates/brim_diagnostics/lib",
    "crates/brim_diagnostics/playground", "crates/brim_lexer", "crates/brim",
    "crates/brim_span", "crates/brim_span", "crates/brim_parser", "crates/brim_ast", "crates/brim_index",
    "crates/brim_diag_macro", "crates/brim_symbols_macro", "crates/brim_ctx", "crates/brim_hir", "crates/brim_codegen", "crates/brim_middle"]
resolver = "1"

[workspace.dependencies]

# Core dependencies
brim-shell = { path = "crates/brim_shell", version = "0.1.0" }
brim-config = { path = "crates/brim_config", version = "0.1.0" }
brim-cpp-compiler = { path = "crates/brim_cpp_compiler", version = "0.1.0" }
brim-fs = { path = "crates/brim_fs", version = "0.1.0" }
brim-diagnostics = { path = "crates/brim_diagnostics/lib", version = "0.1.0" }
brim-lexer = { path = "crates/brim_lexer", version = "0.1.0" }
brim-span = { path = "crates/brim_span", version = "0.1.0" }
brim = { path = "crates/brim", version = "0.1.0" }
brim-parser = { path = "crates/brim_parser", version = "0.1.0" }
brim-ast = { path = "crates/brim_ast", version = "0.1.0" }
brim-index = { path = "crates/brim_index", version = "0.1.0" }
brim-diag-macro = { path = "crates/brim_diag_macro", version = "0.1.0" }
brim-symbols-macro = { path = "crates/brim_symbols_macro", version = "0.1.0" }
brim-ctx = { path = "crates/brim_ctx", version = "0.1.0" }
brim-hir = { path = "crates/brim_hir", version = "0.1.0" }
brim-codegen = { path = "crates/brim_codegen", version = "0.1.0" }
brim-middle = { path = "crates/brim_middle", version = "0.1.0" }

# Other dependencies
anyhow = "1.0.95"
colored = "2.2.0"
log = "0.4.26"
thiserror = "2.0.9"
backtrace = "0.3.74"
clap = { version = "4.5.23", features = ["derive"] }
anstyle = "1.0.10"
tar = "0.4.42"
toml = "0.8.19"
serde = "1.0.216"
uuid = { version = "1.11.0", features = ["v4"] }
indexmap = "2.7.0"
anstream = "0.6.18"
toml_edit = "0.22.22"
http-body-util = "0.1.2"
url = "2.5.4"
gethostname = "0.5.0"
ropey = "1.6.1"
tracing = { version = "0.1.40", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "chrono",
    "time",
] }
termcolor = "1.4.1"
convert_case = "0.7.1"
lazy_static = "1.5.0"
dirs = "6.0.0"

[workspace.lints.clippy]
non_upper_case_globals = "allow"
