[workspace]
members = [
    "cli",
    "crates/brim",
    "crates/brim_ast",
    "crates/brim_codegen",
    "crates/brim_config",
    "crates/brim_cpp_compiler",
    "crates/brim_ctx",
    "crates/brim_diag_macro",
    "crates/brim_diagnostics/lib",
    "crates/brim_diagnostics/playground",
    "crates/brim_fs",
    "crates/brim_hir",
    "crates/brim_index",
    "crates/brim_lexer",
    "crates/brim_middle",
    "crates/brim_parser",
    "crates/brim_shell",
    "crates/brim_span",
    "crates/brim_span",
    "crates/brim_symbols_macro",
]
resolver = "1"

[workspace.dependencies]
# Core dependencies
brim = { path = "crates/brim", version = "0.1.0" }
brim-ast = { path = "crates/brim_ast", version = "0.1.0" }
brim-codegen = { path = "crates/brim_codegen", version = "0.1.0" }
brim-config = { path = "crates/brim_config", version = "0.1.0" }
brim-cpp-compiler = { path = "crates/brim_cpp_compiler", version = "0.1.0" }
brim-ctx = { path = "crates/brim_ctx", version = "0.1.0" }
brim-diag-macro = { path = "crates/brim_diag_macro", version = "0.1.0" }
brim-diagnostics = { path = "crates/brim_diagnostics/lib", version = "0.1.0" }
brim-fs = { path = "crates/brim_fs", version = "0.1.0" }
brim-hir = { path = "crates/brim_hir", version = "0.1.0" }
brim-index = { path = "crates/brim_index", version = "0.1.0" }
brim-lexer = { path = "crates/brim_lexer", version = "0.1.0" }
brim-middle = { path = "crates/brim_middle", version = "0.1.0" }
brim-parser = { path = "crates/brim_parser", version = "0.1.0" }
brim-shell = { path = "crates/brim_shell", version = "0.1.0" }
brim-span = { path = "crates/brim_span", version = "0.1.0" }
brim-symbols-macro = { path = "crates/brim_symbols_macro", version = "0.1.0" }

# Other dependencies
anstream = "0.6.18"
anstyle = "1.0.10"
anyhow = "1.0.97"
backtrace = "0.3.74"
clap = { version = "4.5.38", features = ["derive"] }
colored = "3.0.0"
convert_case = "0.7.1"
dirs = "6.0.0"
fs-err = "3.1.0"
gethostname = "0.5.0"
indexmap = "2.9.0"
lazy_static = "1.5.0"
serde = "1.0.219"
sysinfo = "0.33.1"
termcolor = "1.4.1"
terminal_size = "0.4.1"
thiserror = "2.0.12"
toml = "0.8.20"
toml_edit = "0.22.24"
tracing = { version = "0.1.40", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono", "time"] }
url = "2.5.4"
dashmap = "7.0.0-rc2"

[profile.release]
panic = 'abort'

# These clippy settings are copied from https://github.com/oxc-project/oxc/blob/main/Cargo.toml

[workspace.lints.rust]
absolute_paths_not_starting_with_crate = "warn"
non_ascii_idents = "warn"
unit-bindings = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)', 'cfg(coverage_nightly)'] }
tail_expr_drop_order = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_unsafe = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

# restriction lints
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
print_stdout = "warn"
print_stderr = "warn"
allow_attributes = "warn"
clone_on_ref_ptr = "warn"
self_named_module_files = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
filetype_is_file = "warn"
get_unwrap = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
unnecessary_safety_comment = "warn"
undocumented_unsafe_blocks = "warn"
infinite_loop = "warn"
map_with_unused_argument_over_ranges = "warn"
unused_result_ok = "warn"
pathbuf_init_then_push = "warn"

# pedantic lints
pedantic = { level = "warn", priority = -1 }
struct_excessive_bools = "allow"
too_many_lines = "allow"
must_use_candidate = "allow"
wildcard_imports = "allow"
doc_markdown = "allow"
similar_names = "allow"
fn_params_excessive_bools = "allow"
missing_errors_doc = "allow"

# disabled lints
unnecessary_to_owned = "allow"
expect_used = "allow"

# complexity lints
complexity = { level = "warn", priority = -1 }
too_many_arguments = "allow"
non_std_lazy_statics = "allow"

# nursery lints
nursery = { level = "warn", priority = -1 }
missing_const_for_fn = "allow"
option_if_let_else = "allow"
or_fun_call = "allow"
cognitive_complexity = "allow"
non_send_fields_in_send_ty = "allow"
use_self = "allow"
significant_drop_tightening = "allow"
branches_sharing_code = "allow"
fallible_impl_from = "allow"
useless_let_if_seq = "allow"
impl_trait_in_params = "allow"
significant_drop_in_scrutinee = "warn"
iter_on_single_items = "warn"
unused_peekable = "warn"
too_long_first_doc_paragraph = "warn"
suspicious_operation_groupings = "warn"
redundant_clone = "warn"

# cargo-specific lints
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
