[package]
name = "brim-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
brim = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anstream = { workspace = true }