[package]
name = "brim-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
brim = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anstream = { workspace = true }
colored = "3.0.0"
backtrace = "0.3.74"
brim-parser = { workspace = true }
brim-cpp-compiler = { workspace = true }
brim-ctx = { workspace = true }
toml_edit = { workspace = true }
brim-codegen = { workspace = true }
terminal_size = { workspace = true }
sysinfo = { workspace = true }
brim-middle = { workspace = true }
