[package]
name = "brim-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anstream = { workspace = true }
anyhow = { workspace = true }
backtrace = "0.3.74"
brim = { workspace = true }
brim-codegen = { workspace = true }
brim-cpp-compiler = { workspace = true }
brim-ctx = { workspace = true }
brim-middle = { workspace = true }
brim-parser = { workspace = true }
clap = { workspace = true, features = ["derive"] }
colored = "3.0.0"
sysinfo = { workspace = true }
terminal_size = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
