[package]
name = "brim-cli-1"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
backtrace = { workspace = true }
clap = { workspace = true, features = ["derive"] }
colored = { workspace = true }
anstyle = { workspace = true }
anstream = { workspace = true }
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
http-body-util = { workspace = true }
dirs = "5.0.1"
brim-shell = { workspace = true }
ropey = { workspace = true }
thiserror = { workspace = true }
indexmap = "2.7.0"
codespan-reporting = "0.11.1"
unindent = "0.2.3"
term = "1.0.1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
itertools = "0.13.0"
rand = "0.9.0-beta.1"
brim-config = { workspace = true }
brim-cpp-compiler = { workspace = true }
toml = { workspace = true }
lazy_static = "1.5.0"
regex = "1.11.1"