[package]
name = "snap"
version = "0.1.0"
edition = "2024"

[dependencies]
brim-shell = { workspace = true }
anyhow = { workspace = true }
glob = "0.3.2"
brim = { workspace = true, features = ["snap"] }
brim-parser = { workspace = true }
once_cell = "1.20.2"
colored = { workspace = true }
indexmap = { workspace = true }