[package]
name = "snap"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
brim = { workspace = true, features = ["snap"] }
brim-parser = { workspace = true }
brim-shell = { workspace = true }
colored = { workspace = true }
glob = "0.3.2"
indexmap = { workspace = true }
once_cell = "1.20.2"
