[package]
name = "brim"
version = "0.1.0"
edition = "2024"

[dependencies]
brim-diagnostics = { workspace = true }
brim-span = { workspace = true }
brim-config = { workspace = true }
anyhow = { workspace = true }
brim-shell = { workspace = true }
anstream = { workspace = true }
brim-fs = { workspace = true }
tracing = { workspace = true }
brim-lexer = { workspace = true }