[package]
name = "brim-config"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
toml_edit = { workspace = true }
brim-fs = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
brim-middle = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }