[package]
name = "brim-config"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
brim-fs = { workspace = true }
brim-middle = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
