[package]
name = "brim-cpp-compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
brim-config = { workspace = true }
which = "7.0.2"
tracing = { workspace = true }
thiserror = { workspace = true }
brim-shell = { workspace = true }
spinners = "4.1.1"