[package]
name = "brim-cpp-compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
brim-config = { workspace = true }
brim-shell = { workspace = true }
serde = { workspace = true, features = ["derive"] }
spinners = "4.1.1"
thiserror = { workspace = true }
tracing = { workspace = true }
which = "7.0.2"
