[package]
name = "brim-ctx"
version = "0.1.0"
edition = "2024"

[dependencies]
brim-ast = { workspace = true }
brim-span = { workspace = true }
brim-diagnostics = { workspace = true }
anyhow = { workspace = true }
brim-middle = { workspace = true }
brim-hir = { workspace = true }
brim-diag-macro = { workspace = true }
tracing = { workspace = true }
convert_case = { workspace = true }
indexmap = { workspace = true }

[lints]
workspace = true
