[package]
name = "brim-ctx"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
brim-ast = { workspace = true }
brim-diag-macro = { workspace = true }
brim-diagnostics = { workspace = true }
brim-hir = { workspace = true }
brim-middle = { workspace = true }
brim-span = { workspace = true }
convert_case = { workspace = true }
indexmap = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
