[package]
name = "brim-diag-macro"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro-rules = "0.4.0"
proc-macro2 = "1.0.94"
syn = { version = "2.0.100", features = ["extra-traits"] }
quote = "1.0.38"
thiserror = { workspace = true }
anyhow = { workspace = true }
brim-diagnostics = { workspace = true }