[package]
name = "brim-hir"
version = "0.1.0"
edition = "2024"

[dependencies]
brim-span = { workspace = true }
brim-index = { workspace = true }
brim-ast = { workspace = true }
brim-middle = { workspace = true }
brim-diagnostics = { workspace = true }
brim-diag-macro = { workspace = true }
indexmap = { workspace = true }

[lints]
workspace = true
