[package]
name = "brim-hir"
version = "0.1.0"
edition = "2024"

[dependencies]
brim-ast = { workspace = true }
brim-config = { workspace = true }
brim-diag-macro = { workspace = true }
brim-diagnostics = { workspace = true }
brim-middle = { workspace = true }
brim-span = { workspace = true }
brim-fs = { workspace = true }
indexmap = { workspace = true }

[lints]
workspace = true
