[package]
name = "brim-middle"
version = "0.1.0"
edition = "2024"

[dependencies]
brim-ast = { workspace = true }
brim-span = { workspace = true }
brim-index = { workspace = true }
brim-diagnostics = { workspace = true }
brim-diag-macro = { workspace = true }
clap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
convert_case = { workspace = true }

[lints]
workspace = true
