[package]
name = "brim-middle"
version = "0.1.0"
edition = "2024"

[dependencies]
brim-ast = { workspace = true }
brim-diag-macro = { workspace = true }
brim-diagnostics = { workspace = true }
brim-index = { workspace = true }
brim-span = { workspace = true }
clap = { workspace = true }
indexmap = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
anstream = { workspace = true }

[lints]
workspace = true
