[package]
name = "brim-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
unicode-normalization = "0.1.24"
indexmap = { workspace = true }
brim-span = { workspace = true }
brim-ast = { workspace = true }
brim-diag-macro = { workspace = true }
brim-diagnostics = { workspace = true }
brim-lexer = { workspace = true }
brim-middle = { workspace = true }